[package]
name = "debugless-unwrap"
version = "0.0.2"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Unwrap Result<!Debug, !Debug> and Option<!Debug>"
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/Tamschi/debugless-unwrap"
include = [
	"**/*.rs",
	"/*.md",
]

[dev-dependencies]
assert-panic = "1.0.1"
